Included database admin tools and restructured index page

--- a/vagrant/var/www/index.html
+++ b/vagrant/var/www/index.html
@@ -45,21 +45,29 @@
 	<div id="content" class="container_12 clearfix" role="main">
 		<section id="maincontent" class="grid_8" role="region">
 			<h1>IBR Vagrantbox</h1>
+			<p><strong>Erfassung</strong></p>
 			<ul>
 			    <li><a href="viewer">Generic Viewer</a></li>
+			</ul>
+			<p><strong>Administration</strong></p>
+			<ul>
+			    <li><a href="manager">Tomcat Manager (IBR Applikationen)</a></li>
+				<li><a href="phppgadmin">Raumdaten (phpPGAdmin)</a></li>
+				<li><a href="openrdf-workbench">Semantische Daten (Sesame Workbench)</a></li>
+			    <li><a href="phpmyadmin">Annotationsdaten (phpMyAdmin)</a></li>
+			    <li><a href="ask">Ask Notebook Manager</a></li>
+			</ul>
+			<p><strong>REST-Schnittstellen</strong></p>
+			<ul>
 			    <li><a href="spatialstore">Spatialstore</a></li>
 			    <li><a href="annotationserver">Annotationserver</a></li>
-			   	<li><a href="openrdf-sesame">Sesame Server</a></li>
-			    <li><a href="openrdf-workbench">Sesame Workbench</a></li>
-			    <li><a href="ask">Ask Notebook Manager</a></li>
-			    <li><a href="manager">Tomcat Manager</a></li>
+			   	<li><a href="openrdf-sesame">Sesame Triple Store</a></li>
 			</ul>
 		</section>
 		<section id="additionalcontent" class="grid_3 prefix_1"
 			role="complementary">
 		</section>
 	</div>
-	<!--TYPO3SEARCH_end-->
 	<footer id="footer" role="contentinfo">
 		<section id="footercontent" class="container_12 clearfix">
 			<h2 class="skip">Weiterführende Informationen</h2>
